[package]
name = "myactix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
anyhow = "1.0.70"
futures = "0.3.12"
futures-channel = "0.3"
futures-core = "0.3.4"
futures-retry = "0.6"
futures-timer = "3.0"
futures-util = "~0.3"
tokio = { version = "1", features = ["full"] }